few fixes for layout on mobile

--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -14,6 +14,15 @@ main {
     justify-self: center;
   }
   section {
+    margin: 1rem 0 1rem 0;
+    hr {
+      margin-bottom: 1rem;
+    }
+  }
+}
+
+@media (min-width: 1200px) {
+  section {
     margin: 2rem 0 2rem 0;
     hr {
       margin-bottom: 1rem;
