--- a/scss/_skills.scss
+++ b/scss/_skills.scss
@@ -42,6 +42,9 @@
     padding-top: 1rem;
     padding-bottom: 1rem;
   }
+  .skill-wrapper {
+    width: 90%;
+  }
   .skill-header.front-end::before {
     background-color: $primaryBlue;
     border-radius: 3px;
